srml/support/test/tests/decl_storage_ui/config_duplicate.stderr
error: `config()`/`get()` with the same name already defined.
  --> $DIR/config_duplicate.rs:29:21
   |
29 |         pub Value2 config(value): u32;
   |                           ^^^^^
